add email and change colors a bit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
         <!-- footer -->
         <footer>
-            <small>2025 moonweft</small>
+            <small>© 2025 moonweft</small><br>
+            <small>meledo@duck.com</small>
         </footer>
     </body>
 </html>
