--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>moonweft</title>
         <link rel="stylesheet" href="styles/base.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png">
     </head>
     <body>
 
@@ -37,9 +39,11 @@
         </main>
 
         <!-- footer -->
-        <footer>
-            <small>© 2025 moonweft</small><br>
-            <small>meledo@duck.com</small>
+        <footer class="site-footer">
+            <p class="copyright">© 2025 moonweft</p>
+            <p class="contact">
+                <a class="email-link" href="mailto:meledo@duck.com">meledo@duck.com</a>
+            </p>
         </footer>
     </body>
 </html>
