add scanlines and improve formatting of footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                                 <div class="fetch-row">
                                     <span class="key">OS:</span>
-                                    <span class="val">Arch Linux</span>
+                                    <span class="val">Arch Linux btw</span>
                                 </div>
 
                                 <div class="fetch-row">
@@ -83,8 +83,8 @@
                         </div>
 
                         <div class="mpd-song">
-                            <div class="song-title">My Way</div>
-                            <div class="song-artist">Frank Sinatra</div>
+                            <div class="song-title">Mann Mera</div>
+                            <div class="song-artist">Gajendra Verma</div>
                         </div>
 
                         <div class="mpd-time">0:45/3:20</div>
