--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
                         </article>
                     </main>
-                </div> <aside class="sidebar">
+                </div>
+                
+                <aside class="sidebar">
                     <div class="card mpd-player">
                         <div class="mpd-status">
                             [playing] <span class="mpd-vol">vol: 80%</span>
@@ -95,6 +97,22 @@
 
                         <div class="mpd-controls">
                             [&lt;] [P] [&gt;]
+                        </div>
+                    </div>
+
+                    <div class="blinkies-panel">
+                        <div class="blinkies-header">[network]</div>
+                        <div class="blinkies-grid">
+                            <img src="assets/firefoxnow.gif" alt="firefox">
+                            <img src="assets/pokemon.gif" alt="pokemon">
+                            <img src="assets/penguins.gif" alt="penguins">
+                            <img src="assets/archlinux.gif" alt="arch">
+                            <img src="assets/saynotoweb3.gif" alt="No Web3">
+                            <img src="assets/neovim.gif" alt="nvim">
+                            <img src="assets/anythingbut.gif" alt="chrome">
+                            <img src="assets/bsod.gif" alt="bsod">
+                            <img src="assets/mademyown.gif" alt="mademyown">
+                            <img src="assets/ublock-now.png" alt="ublock">
                         </div>
                     </div>
                 </aside>
