--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="fetch-row">
                                     <span class="key">Github:</span> 
-                                    <span class="val"><a href="https://github.com/mel-edo" target="_blank" rel="noopener noreferrer">@mel-edo</a></span>
+                                    <span class="val"><a href="https://github.com/mel-edo" target="_blank" rel="noopener noreferrer">/mel-edo</a></span>
                                 </div>
 
                                 <div class="fetch-row">
@@ -139,10 +139,19 @@
             setInterval(updateClock, 30000);
         </script>
 
+
         <footer class="site-footer">
             <p>© 2025 moonweft</p>
             <p class="mail"><a href="mailto:meledo@duck.com" target="_blank">meledo@duck.com</a></p>
         </footer>
+
+        <script src="scripts/oneko.js"></script>
+        <!-- <script>
+            oneko.js({
+                cat: './assets/eevee.png',
+                speed: 10
+            });
+        </script> -->
 
     </body>
 
