feat(visitor): add visitor counter to home page

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="card visitor-panel">
+                        <div class="visitor-header">[visitor counter]</div>
+                        <div class="visitor-visual">
+                            <div class="visitor-counter"><img src="https://count.getloli.com/get/@moonweft-demo?theme=moebooru&padding=4&darkmode=0" alt="visitor count"></div>
+                        </div>
+                    </div>
                 </aside>
 
             </div>
