feat(checkpoint): add internet checklpoint banner

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
                             </div>
 
                         </article>
+
+                        <a href="checkpoint.html" class="checkpoint-banner">
+                            <div class="cp-icon">
+                                <img src="assets/bonfire.png" alt="bonfire">
+                            </div>
+                            <div class="cp-text">
+                                <div class="cp-title">INTERNET CHECKPOINT</div>
+                                <div class="cp-sub">Take a rest. Save your progress</div>
+                            </div>
+                            <div class="cp-arrow">-></div>
+                        </a>
                     </main>
                 </div>
                 
