feat(polar bear): add polar bear to sidebar

--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
                             <div class="visitor-counter"><img src="https://count.getloli.com/get/@moonweft-demo?theme=moebooru&padding=4&darkmode=0" alt="visitor count"></div>
                         </div>
                     </div>
+
+                    <div class="card polar-panel">
+                        <div class="polar-header">[cool gif I found]</div>
+                        <div class="polar-visual">
+                            <div class="polar-gif"><img src="assets/bongo-cat-polar-bear.gif" alt="cool gif"></div>
+                        </div>
+                    </div>
                 </aside>
 
             </div>
