fix(ui): slight pixel and name adjustments

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                         </div>
 
                         <div class="mpd-song">
-                            <div class="song-title">Mann Mera</div>
-                            <div class="song-artist">Gajendra Verma</div>
+                            <div class="song-title">Borderline</div>
+                            <div class="song-artist">Tame Impala</div>
                         </div>
 
-                        <div class="mpd-time">0:45/3:20</div>
+                        <div class="mpd-time">0:45/3:58</div>
 
                         <div class="mpd-progress">
                             ===========>-------------------------------
