feat(checkpoint): add new checkpoint and some minor adjustments in about section

--- a/checkpoint.html
+++ b/checkpoint.html
@@ -82,7 +82,7 @@
                 <div class="info-card">
                     <div class="info-header">ABOUT</div>
                     <div class="info-content">
-                        <p>I was inspired to make this checkpoint thing by an instagram page called <a href="https://www.instagram.com/intercheckpoint/">@intercheckpoint</a>.</p>
+                        <p>I was inspired to make this checkpoint thing by an instagram page called <a target="_blank" href="https://www.instagram.com/intercheckpoint/">@intercheckpoint</a>.</p>
                         <p>Go ahead and check them out!</p>
                         <p>I'll update this and add more retro music whenever I feel like it.</p>
                         <p style="margin-top: 15px; color: #888; ">> Feel free to stay as long as you need.</p>
