fix: use image instead of font face

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 
                                 <div class="about-actions">
                                     <a href="projects.html" class="leak-btn p5-style">
-                                        <span class="p5-bg-layer"></span> <span class="p5-text">PROJECTS</span>
+                                        <span class="p5-bg-layer"></span>
+                                        <img src="assets/projects-text.png" alt="PROJECTS" class="p5-img">
                                     </a>
                                     <a href="links.html" class="leak-btn y2k-style">
                                         LINKS
