fix: add link to projects in navbar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                     <nav class="top-nav">
                         <a href="#">[home]</a>
-                        <a href="#">[projects]</a>
+                        <a href="projects.html">[projects]</a>
                         <a href="#">[links]</a>
                     </nav>
 
