feat: many pixel adjustments and additions to the project page to make it more stylish

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                     <div class="content-wrapper">
                         <div class="main-info">
                             <div class="details">
-                                <h2>MOONWEFT.ME</h2>
+                                <h2>MOONWEFT</h2>
                                 <p>This website you're currently on.</p>
                             </div>
                             <div class="category">WEB</div>
@@ -61,7 +61,7 @@
                     <div class="content-wrapper">
                         <div class="main-info">
                             <div class="details">
-                                <h2>GB_EMULATOR</h2>
+                                <h2>GB EMULATOR</h2>
                                 <p>Gameboy emulator written in Rust.</p>
                             </div>
                             <div class="category">RUST</div>
@@ -79,7 +79,7 @@
                     <div class="content-wrapper">
                         <div class="main-info">
                             <div class="details">
-                                <h2>LINUX_RICE</h2>
+                                <h2>LINUX RICE</h2>
                                 <p>My awesomeWM rice.</p>
                             </div>
                             <div class="category">UNIX</div>
