fix: minor changes

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         </script>
 
         <footer class="site-footer">
-            <p>© 2025 moonweft</p>
+            <p>♡2025 moonweft</p>
             <p class="mail"><a href="mailto:meledo@duck.com" target="_blank">meledo@duck.com</a></p>
         </footer>
 
