chore: wording in projects

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                         </div>
 
                         <div class="expanded-info">
-                            <p>A personal portfolio built with HTML, CSS and vanilla JS. I finally got around to building a website and have been enjoying the process so far.</p>
+                            <p>A personal website built with HTML, CSS and vanilla JS. I finally got around to building a website and have been enjoying the process so far.</p>
                             <a href="https://github.com/mel-edo/moonweft" target="_blank" class="repo-link">VISIT REPO</a>
                         </div>
                     </div>
