feat: add pagination and stylish things to button plate

--- a/notes.html
+++ b/notes.html
@@ -15,15 +15,15 @@
 
             <header class="blueprint-header">
                 <div class="spec-box">
-                    <span class="label">PROJECT:</span> MOONWEFT
+                    <span class="label">PROJECT:</span> BLOG
                     <br>
-                    <span class="label">UNIT:</span> 01
+                    <span class="label">UNIT:</span> 02
                 </div>
                 <h1 class="signal-text">NOTES</h1>
                 <div class="spec-box right">
                     <span class="label">STATUS:</span> AMPLIFIED
                     <br>
-                    <span class="label">BPM:</span> 190
+                    <span class="label">BPM:</span> 185
                 </div>
             </header>
 
@@ -122,11 +122,26 @@
                 </div>
 
                 <div class="transport-controls">
+
+                    <div class="masking-tape">
+                        <span>DON'T TOUCH!</span>
+                    </div>
+
+                    <div class="dip-switch-block">
+                        <div class="dip-switch"></div>
+                        <div class="dip-switch"></div>
+                        <div class="dip-switch"></div>
+                        <div class="dip-switch"></div>
+                    </div>
+
                     <div class="rack-screw top-left-1"></div>
                     <div class="rack-screw top-right-1"></div>
                     <div class="rack-screw bottom-left-1"></div>
                     <div class="rack-screw bottom-right-1"></div>
 
+                    <div class="kessoku-sticker">
+                        <img src="assets/kessoku.gif">
+                    </div>
                     <div class="bocchi-sticker">
                         <img src="assets/bocchi.png">
                     </div>
@@ -135,10 +150,21 @@
                         <span class="switch-label">◄◄</span>
                     </button>
 
-                    <div class="tape-counter">
-                        <span class="label">TAPE COUNTER</span>
-                        <div class="counter-window">
-                            <span id="current-bank-num">001</span>
+                    <div class="cassette-display">
+                        <div class="cassette-housing">
+                            <div class="cassette-label-area">
+                                <span class="tape-name">MOONWEFT</span>
+                                <span class="bank-readout">VOL. <span id="current-bank-num">001</span></span>
+                            </div>
+
+                            <div class="tape-window">
+                                <div class="spool left">
+                                    <div class="spool-teeth"></div>
+                                </div>
+                                <div class="magnetic-tape"></div> <div class="spool right">
+                                    <div class="spool-teeth"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -147,10 +173,6 @@
                     </button>
                 </div>
             </main>
-
-            <footer class="schematic-footer">
-                WRITE SOMETHING HERE BEFORE PUSHING LOL
-            </footer>
         </div>
 
         <script>
