--- a/notes.html
+++ b/notes.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>~/notes</title>
         <link rel="stylesheet" href="styles/notes.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;800&family=Permanent+Marker&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;800&family=Permanent+Marker&family=Teko:wght@600&display=swap">
         <link rel="icon" type="image/png" size="32x32" href="assets/bocchi.png">
     </head>
 
@@ -17,7 +17,7 @@
                 <div class="spec-box">
                     <span class="label">PROJECT:</span> BLOG
                     <br>
-                    <span class="label">UNIT:</span> 02
+                    <span class="label">UNIT:</span> 01
                 </div>
                 <h1 class="signal-text">NOTES</h1>
                 <div class="spec-box right">
