chore: checkpoint update and minor wording

--- a/checkpoint.html
+++ b/checkpoint.html
@@ -53,7 +53,7 @@
 
                         <div class="cp-text-box">
                             <p>You have been surfing for a while.</p>
-                            <p>Rest here for a moment and enjoy some retro music.</p>
+                            <p>Rest here for a moment and enjoy some music.</p>
                             <p class="signature">- moonweft</p>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                     <div class="info-content">
                         <p>I was inspired to make this checkpoint thing by an instagram page called <a target="_blank" href="https://www.instagram.com/intercheckpoint/">@intercheckpoint</a>.</p>
                         <p>Go ahead and check them out!</p>
-                        <p>I'll update this and add more retro music whenever I feel like it.</p>
+                        <p>I'll update this and add more music whenever I feel like it.</p>
                         <p style="margin-top: 15px; color: #888; ">> Feel free to stay as long as you need.</p>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
 
             let allCheckpoints = [];
             let currentPage = 1;
-            let itemsPerPage = 5;
+            let itemsPerPage = 4;
 
             audioPlayer.volume = 0.4;
 
