fix: some style adjustments and placeholder text + post update

--- a/notes.html
+++ b/notes.html
@@ -82,15 +82,14 @@
                         <div class="screw top-right">+</div>
 
                         <div class="pedal-display">
-                            <span class="date">14 DEC 2025</span>
-                            <span class="id">#003</span>
+                            <span class="date">-- --- ----</span>
+                            <span class="id">----</span>
                         </div>
 
-                        <h2 class="pedal-title"><a href="#">Switching to hyprland</a></h2>
+                        <h2 class="pedal-title"><a href="#">Loading...</a></h2>
 
                         <div class="tags">
-                            <span class="tag">[LINUX]</span>
-                            <span class="tag">[RICE]</span>
+                            <span class="tag">----</span>
                         </div>
 
                         <div class="stomp-switch"></div>
@@ -98,27 +97,6 @@
                         <div class="screw bottom-left">+</div>
                         <div class="screw bottom-right">+</div>
                     </article>
-                        <div class="screw top-left">+</div>
-                        <div class="screw top-right">+</div>
-
-                        <div class="pedal-display">
-                            <span class="date">12 DEC 2025</span>
-                            <span class="id">#002</span>
-                        </div>
-
-                        <h2 class="pedal-title"><a href="#">Social Anxiety & Code</a></h2>
-
-                        <div class="tags">
-                            <span class="tag">[PERSONAL]</span>
-                            <span class="tag">[BTR]</span>
-                        </div>
-
-                        <div class="stomp-switch"></div>
-
-                        <div class="screw bottom-left">+</div>
-                        <div class="screw bottom-right">+</div>
-                    </article>
-
                 </div>
 
                 <div class="transport-controls">
