--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="card visitor-panel">
                         <div class="visitor-header">[visitor counter]</div>
                         <div class="visitor-visual">
-                            <div class="visitor-counter"><img src="https://count.getloli.com/get/@moonweft-demo?theme=moebooru&padding=4&darkmode=0" alt="visitor count"></div>
+                            <div class="visitor-counter"><img src="https://count.getloli.com/get/@moonweft-demo?theme=nixietube-1&padding=4&darkmode=0" alt="visitor count"></div>
                         </div>
                     </div>
                     
